make cards draggable

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href='mailto:jjkerssen@gmail.com'><i class='far fa-envelope icon-click'></i></a>
             </span>
         </div>
-        <div class='div div-wiki'>
+        <div class='div div-wiki draggable'>
             <span class=project-span>
                 <h2><a href='https://wikispeaks.herokuapp.com/' class=card-title target=blank>Wikispeaks</a></h2><a href='https://github.com/jennifer/wikispeaks' target=blank class=icon-github><i class='fab fa-github'></i></a>
             </span>
@@ -51,7 +51,7 @@
                 </div>
             </a>
         </div>
-        <div class='div div-gal'>
+        <div class='div div-gal draggable'>
             <span class=project-span>
                 <h2><a href='https://website-gallery.herokuapp.com/' class=card-title target=blank>Gallery</a></h2><a href='https://github.com/jennifer/gallery' target=blank class=icon-github><i class='fab fa-github'></i></a>
             </span>
@@ -73,7 +73,7 @@
                 </div>
             </a>
         </div>
-        <div class='div div-sv'>
+        <div class='div div-sv draggable'>
             <span class=project-span>
                 <h2><a href='https://jennifer.github.io/silicon-valley-quiz/' class=card-title target=blank>Silicon Valley Quiz</a></h2><a href='https://github.com/jennifer/silicon-valley-quiz' target=blank class=icon-github><i class='fab fa-github'></i></a>
             </span>
@@ -91,7 +91,7 @@
                 </div>
             </a>
         </div>
-        <div class='div div-ref'>
+        <div class='div div-ref draggable'>
             <span class=project-span>
                 <h2><a href='https://referred-app.herokuapp.com/' target=blank>Referred</a></h2><a href='https://github.com/jennifer/referred-client' target=blank class=icon-github><i class='fab fa-github'></i></a>
             </span>
@@ -114,7 +114,7 @@
                 </div>
             </a>
         </div>
-        <div class='div div-res'>
+        <div class='div div-res draggable'>
             <a href='https://drive.google.com/file/d/1Og3-9QOkGxIOgBcxNK7bueYIMSZ2nvxR/view?usp=sharing' target=blank>
                 <span class=project-span>
                     <h2>Resume</h2>
@@ -124,7 +124,7 @@
                 </div>
             </a>
         </div>
-        <div class='div div-pic'>
+        <div class='div div-pic draggable'>
             <a href='https://github.com/jennifer' target=blank>
                 <span class='project-span hello-span'>
                     <i class='fab fa-github icon-github'></i>
@@ -135,6 +135,7 @@
             </a>
         </div>
     </main>
+    <script src="https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js"></script>
     <script type='text/javascript' src='scripts.js'></script>
 </body>
 </html>
