bring clicked card to front

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
             </a>
         </div>
-        <div class='div div-gal draggable'>
+        <div class='div div-gal draggable' onClick='bringCardToFront(this);'>
             <span class=project-span>
                 <h2><a href='https://website-gallery.herokuapp.com/' class=card-title target=blank>Gallery</a></h2><a href='https://github.com/jennifer/gallery' target=blank class=icon-github><i class='fab fa-github'></i></a>
             </span>
@@ -74,7 +74,7 @@
                 </div>
             </a>
         </div>
-        <div class='div div-sv draggable'>
+        <div class='div div-sv draggable' onClick='bringCardToFront(this);'>
             <span class=project-span>
                 <h2><a href='https://jennifer.github.io/silicon-valley-quiz/' class=card-title target=blank>Silicon Valley Quiz</a></h2><a href='https://github.com/jennifer/silicon-valley-quiz' target=blank class=icon-github><i class='fab fa-github'></i></a>
             </span>
@@ -92,7 +92,7 @@
                 </div>
             </a>
         </div>
-        <div class='div div-ref draggable'>
+        <div class='div div-ref draggable' onClick='bringCardToFront(this);'>
             <span class=project-span>
                 <h2><a href='https://referred-app.herokuapp.com/' target=blank>Referred</a></h2><a href='https://github.com/jennifer/referred-client' target=blank class=icon-github><i class='fab fa-github'></i></a>
             </span>
@@ -115,7 +115,7 @@
                 </div>
             </a>
         </div>
-        <div class='div div-res draggable'>
+        <div class='div div-res draggable' onClick='bringCardToFront(this);'>
             <a href='https://drive.google.com/file/d/1Og3-9QOkGxIOgBcxNK7bueYIMSZ2nvxR/view?usp=sharing' target=blank>
                 <span class=project-span>
                     <h2>Resume</h2>
