bring clicked div to front

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class='div div-wiki draggable' onClick='bringCardToFront(this);'>
             <span class=project-span>
-                <h2><a href='https://wikispeaks.herokuapp.com/' class=card-title target=blank>Wikispeaks</a></h2><a href='https://github.com/jennifer/wikispeaks' target=blank class=icon-github><i class='fab fa-github'></i></a>
+                <h2>Wikispeaks</h2><a href='https://github.com/jennifer/wikispeaks' target=blank class=icon-github><i class='fab fa-github'></i></a>
             </span>
             <a href='https://wikispeaks.herokuapp.com/' target=blank>
                 <div class=each-website>
