--- a/index.html
+++ b/index.html
@@ -24,116 +24,113 @@
                 I value relentless curiosity and continuous improvement, and I strive to be a good steward for all users. 
                 Always learning.
             </p>
-            <span class=icon-span>
-                <a href='https://github.com/jennifer' target=blank><i class='fab fa-github'></i></a>
-                <a href='https://www.linkedin.com/in/kerssen/' target='blank'><i class='fab fa-linkedin'></i></a>
-                <a href='mailto:jjkerssen@gmail.com'><i class='far fa-envelope icon-click'></i></a>
+            <span>
+                <a href='https://github.com/jennifer' target=blank><i class='fab fa-github icon-tech'></i></a>
+                <a href='https://www.linkedin.com/in/kerssen/' target='blank'><i class='fab fa-linkedin icon-tech'></i></a>
+                <a href='mailto:jjkerssen@gmail.com'><i class='far fa-envelope icon-click icon-tech'></i></a>
             </span>
         </div>
         <div class='div div-wiki draggable' onClick='bringCardToFront(this);'>
             <span class=project-span>
-                <h2>Wikispeaks</h2><a href='https://github.com/jennifer/wikispeaks' target=blank class=icon-github><i class='fab fa-github'></i></a>
+                <h2>Wikispeaks</h2>
+                <a href='https://github.com/jennifer/wikispeaks' target=blank><i title='View on GitHub' class='fab fa-github icon-project-span'></i></a>
+                <a href='https://wikispeaks.herokuapp.com/' target=blank><i title='Go to Wikispeaks' class="fas fa-external-link-alt icon-project-span"></i></a>
             </span>
-            <a href='https://wikispeaks.herokuapp.com/' target=blank>
-                <div class=each-website>
-                    <img src='https://i.imgur.com/QmAGZhq.png' class=website-image alt='Wikispeaks screenshot'/>
-                    <div class=overlay>
-                        <p class=line-margin-bottom>A full-stack app enabling users to search for Wikipedia articles, view images, and listen to content read aloud.</p>
-                        <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
-                        <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout.</p>
-                        <span class=icon-span>
-                            <a><i title='JavaScript' class='fab fa-js icon-tech'></i></a>
-                            <a><i title='Node.js' class='fab fa-node icon-tech'></i></a>
-                            <a><i title='Amazon Polly' class='fab fa-aws icon-tech'></i></a>
-                            <a><i title='HTML5' class='fab fa-html5 icon-tech'></i></a>
-                            <a><i title='CSS3' class='fab fa-css3-alt icon-tech'></i></a>
-                        </span>
-                    </div>
+            <div class=each-website>
+                <img src='https://i.imgur.com/QmAGZhq.png' class=website-image alt='Wikispeaks screenshot'/>
+                <div class=overlay>
+                    <p class=line-margin-bottom>A full-stack app enabling users to search for Wikipedia articles, view images, and listen to content read aloud.</p>
+                    <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
+                    <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout.</p>
+                    <span>
+                        <a><i title='JavaScript' class='fab fa-js icon-tech'></i></a>
+                        <a><i title='Node.js' class='fab fa-node icon-tech'></i></a>
+                        <a><i title='Amazon Polly' class='fab fa-aws icon-tech'></i></a>
+                        <a><i title='HTML5' class='fab fa-html5 icon-tech'></i></a>
+                        <a><i title='CSS3' class='fab fa-css3-alt icon-tech'></i></a>
+                    </span>
                 </div>
-            </a>
+            </div>
         </div>
         <div class='div div-gal draggable' onClick='bringCardToFront(this);'>
             <span class=project-span>
-                <h2><a href='https://website-gallery.herokuapp.com/' class=card-title target=blank>Gallery</a></h2><a href='https://github.com/jennifer/gallery' target=blank class=icon-github><i class='fab fa-github'></i></a>
+                <h2>Gallery</h2>
+                <a href='https://github.com/jennifer/gallery' target=blank><i title='View on GitHub' class='fab fa-github icon-project-span'></i></a>
+                <a href='https://website-gallery.herokuapp.com/' target=blank><i title='Go to Gallery' class="fas fa-external-link-alt icon-project-span"></i></a>
             </span>
-            <a href='https://website-gallery.herokuapp.com/' target=blank>
-                <div class=each-website>
-                    <img src='https://i.imgur.com/sct6tEh.jpg' class=website-image alt='Gallery screenshot'/>
-                    <div class=overlay>
-                        <p class=line-margin-bottom>A fullstack app that lets users collect, tag, and filter websites for design inspiration.</p>
-                        <p class=line-margin-bottom>Utilizes Webshot and Cloudinary to automatically take a screenshot and display it in an image gallery.</p>
-                        <p class=line-margin-bottom>Uses Node.js for backend CRUD operations, and CSS Grid and Flexbox for responsive layout.</p>
-                        <span class=icon-span>
-                            <a><i title='JavaScript' class='fab fa-js icon-tech'></i></a>
-                            <a><i title='Node.js' class='fab fa-node icon-tech'></i></a>
-                            <a><i title='mongoDB' class='fas fa-database icon-tech'></i></a>
-                            <a><i title='HTML5' class='fab fa-html5 icon-tech'></i></a>
-                            <a><i title='CSS3' class='fab fa-css3-alt icon-tech'></i></a>
-                        </span>
-                    </div>
+            <div class=each-website>
+                <img src='https://i.imgur.com/sct6tEh.jpg' class=website-image alt='Gallery screenshot'/>
+                <div class=overlay>
+                    <p class=line-margin-bottom>A fullstack app that lets users collect, tag, and filter websites for design inspiration.</p>
+                    <p class=line-margin-bottom>Utilizes Webshot and Cloudinary to automatically take a screenshot and display it in an image gallery.</p>
+                    <p class=line-margin-bottom>Uses Node.js for backend CRUD operations, and CSS Grid and Flexbox for responsive layout.</p>
+                    <span>
+                        <a><i title='JavaScript' class='fab fa-js icon-tech'></i></a>
+                        <a><i title='Node.js' class='fab fa-node icon-tech'></i></a>
+                        <a><i title='mongoDB' class='fas fa-database icon-tech'></i></a>
+                        <a><i title='HTML5' class='fab fa-html5 icon-tech'></i></a>
+                        <a><i title='CSS3' class='fab fa-css3-alt icon-tech'></i></a>
+                    </span>
                 </div>
-            </a>
+            </div>
         </div>
         <div class='div div-sv draggable' onClick='bringCardToFront(this);'>
             <span class=project-span>
-                <h2><a href='https://jennifer.github.io/silicon-valley-quiz/' class=card-title target=blank>Silicon Valley Quiz</a></h2><a href='https://github.com/jennifer/silicon-valley-quiz' target=blank class=icon-github><i class='fab fa-github'></i></a>
+                <h2>Silicon Valley Quiz</h2>
+                <a href='https://github.com/jennifer/silicon-valley-quiz' target=blank><i title='View on GitHub' class='fab fa-github icon-project-span'></i></a>
+                <a href='https://jennifer.github.io/silicon-valley-quiz/' target=blank><i title='Go to Silicon Valley Quiz' class="fas fa-external-link-alt icon-project-span"></i></a>
             </span>
-            <a href='https://jennifer.github.io/silicon-valley-quiz/' target=blank>
-                <div class='each-website'>
-                    <img src='https://i.imgur.com/ygFRfKp.png?1' class=website-image alt='Silicon Valley Quiz screenshot'/>
-                    <div class=overlay>
-                        <p class=line-margin-bottom>A responsive and accessible multiple-choice quiz to test knowledge around some of the HBO show's funniest moments.</p>
-                        <span class=icon-span>
-                            <a><i title='JavaScript' class='fab fa-js icon-tech'></i></a>
-                            <a><i title='HTML5' class='fab fa-html5 icon-tech'></i></a>
-                            <a><i title='CSS3' class='fab fa-css3-alt icon-tech'></i></a>
-                        </span>
-                    </div>
+            <div class='each-website'>
+                <img src='https://i.imgur.com/ygFRfKp.png?1' class=website-image alt='Silicon Valley Quiz screenshot'/>
+                <div class=overlay>
+                    <p class=line-margin-bottom>A responsive and accessible multiple-choice quiz to test knowledge around some of the HBO show's funniest moments.</p>
+                    <span>
+                        <a><i title='JavaScript' class='fab fa-js icon-tech'></i></a>
+                        <a><i title='HTML5' class='fab fa-html5 icon-tech'></i></a>
+                        <a><i title='CSS3' class='fab fa-css3-alt icon-tech'></i></a>
+                    </span>
                 </div>
-            </a>
+            </div>
         </div>
         <div class='div div-ref draggable' onClick='bringCardToFront(this);'>
             <span class=project-span>
-                <h2><a href='https://referred-app.herokuapp.com/' target=blank>Referred</a></h2><a href='https://github.com/jennifer/referred-client' target=blank class=icon-github><i class='fab fa-github'></i></a>
+                <h2>Referred</h2>
+                <a href='https://github.com/jennifer/referred-client' target=blank><i title='View on GitHub' class='fab fa-github icon-project-span'></i></a>
+                <a href='https://referred-app.herokuapp.com/' target=blank><i title='Go to Referred' class="fas fa-external-link-alt icon-project-span"></i></a>
             </span>
-            <a href='https://wikispeaks.herokuapp.com/' target=blank>
-                <div class=each-website>
-                    <img src='https://i.imgur.com/JY1LZPT.jpg' class=website-image alt='Referred screenshot'/>
-                    <div class=overlay>
-                        <p class=line-margin-bottom>A fullstack app that lets job-seekers add companies and professional contacts, and track networking milestones.</p>
-                        <p class=line-margin-bottom>Frontend client uses React for UI, CSS Grid to display users’ network dashboard, and Flexbox for responsive layout.</p>
-                        <p class=line-margin-bottom>Node.js backend serves a REST API to store and manage user data.</p>
-                        <span class=icon-span>
-                            <a><i title='JavaScript' class='fab fa-js icon-tech'></i></a>
-                            <a><i title='React' class='fab fa-react icon-tech'></i></a>
-                            <a><i title='Node.js' class='fab fa-node icon-tech'></i></a>
-                            <a><i title='mongoDB' class='fas fa-database icon-tech'></i></a>
-                            <a><i title='HTML5' class='fab fa-html5 icon-tech'></i></a>
-                            <a><i title='CSS3' class='fab fa-css3-alt icon-tech'></i></a>
-                        </span>
-                    </div>
+            <div class=each-website>
+                <img src='https://i.imgur.com/JY1LZPT.jpg' class=website-image alt='Referred screenshot'/>
+                <div class=overlay>
+                    <p class=line-margin-bottom>A fullstack app that lets job-seekers add companies and professional contacts, and track networking milestones.</p>
+                    <p class=line-margin-bottom>Frontend client uses React for UI, CSS Grid to display users’ network dashboard, and Flexbox for responsive layout.</p>
+                    <p class=line-margin-bottom>Node.js backend serves a REST API to store and manage user data.</p>
+                    <span>
+                        <a><i title='JavaScript' class='fab fa-js icon-tech'></i></a>
+                        <a><i title='React' class='fab fa-react icon-tech'></i></a>
+                        <a><i title='Node.js' class='fab fa-node icon-tech'></i></a>
+                        <a><i title='mongoDB' class='fas fa-database icon-tech'></i></a>
+                        <a><i title='HTML5' class='fab fa-html5 icon-tech'></i></a>
+                        <a><i title='CSS3' class='fab fa-css3-alt icon-tech'></i></a>
+                    </span>
                 </div>
-            </a>
+            </div>
         </div>
         <div class='div div-res draggable' onClick='bringCardToFront(this);'>
-            <a href='https://drive.google.com/file/d/1Og3-9QOkGxIOgBcxNK7bueYIMSZ2nvxR/view?usp=sharing' target=blank>
-                <span class=project-span>
-                    <h2>Resume</h2>
-                </span>
-                <div class=each-website>
-                    <img src='https://i.imgur.com/SIYs9jN.png?2' class=website-image alt="Jennifer's resume"/>
-                </div>
-            </a>
+            <span class=project-span>
+                <h2>Resume</h2>
+                <a href='https://drive.google.com/file/d/1Og3-9QOkGxIOgBcxNK7bueYIMSZ2nvxR/view?usp=sharing' target=blank><i title="Go to Jennifer's Resume" class="fas fa-external-link-alt icon-project-span"></i></a>
+            </span>
+            <div class=each-website>
+                <img src='https://i.imgur.com/SIYs9jN.png?2' class=website-image alt="Jennifer's resume"/>
+            </div>
         </div>
-        <div class='div div-pic draggable'>
-            <a href='https://github.com/jennifer' target=blank>
-                <span class='project-span hello-span'>
-                    <i class='fab fa-github icon-github'></i>
-                </span>
-                <div class=each-website>
-                    <img src='https://i.imgur.com/dsNvNIK.jpg?3./images/hello.png' class=website-image alt="Jennifer's headshot"/>
-                </div>
-            </a>
+        <div class='div div-pic draggable' onClick='bringCardToFront(this);'>
+            <span class='project-span line-margin-top line-margin-bottom'>
+                <a href='https://github.com/jennifer' target=blank><i title="View Jennifer's GitHub" class='fab fa-github icon-project-span padding-left'></i></a>
+            </span>
+            <div class=each-website>
+                <img src='https://i.imgur.com/dsNvNIK.jpg?3./images/hello.png' class=website-image alt="Jennifer's headshot"/>
+            </div>
         </div>
     </main>
     <script src="https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js"></script>
