--- a/index.html
+++ b/index.html
@@ -30,48 +30,21 @@
                 <a href='mailto:jjkerssen@gmail.com'><i class='far fa-envelope icon-click icon-tech'></i></a>
             </span>
         </div>
-        <div class='div div-wiki draggable' onClick='bringCardToFront(this);'>
-            <span class=project-span>
-                <h2>Wikispeaks</h2>
-                <a href='https://github.com/jennifer/wikispeaks' target=blank><i title='View on GitHub' class='fab fa-github icon-project-span'></i></a>
-                <a href='https://wikispeaks.herokuapp.com/' target=blank><i title='Go to Wikispeaks' class="fas fa-external-link-alt icon-project-span"></i></a>
+        <div class='div div-pic draggable' onClick='bringCardToFront(this);'>
+            <span class='project-span line-margin-top line-margin-bottom'>
+                <a href='https://github.com/jennifer' target=blank><i title="View Jennifer's GitHub" class='fab fa-github icon-project-span padding-left'></i></a>
             </span>
             <div class=each-website>
-                <img src='https://i.imgur.com/QmAGZhq.png' class=website-image alt='Wikispeaks screenshot'/>
-                <div class=overlay>
-                    <p class=line-margin-bottom>A full-stack app enabling users to search for Wikipedia articles, view images, and listen to content read aloud.</p>
-                    <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
-                    <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout.</p>
-                    <span>
-                        <a><i title='JavaScript' class='fab fa-js icon-tech'></i></a>
-                        <a><i title='Node.js' class='fab fa-node icon-tech'></i></a>
-                        <a><i title='Amazon Polly' class='fab fa-aws icon-tech'></i></a>
-                        <a><i title='HTML5' class='fab fa-html5 icon-tech'></i></a>
-                        <a><i title='CSS3' class='fab fa-css3-alt icon-tech'></i></a>
-                    </span>
-                </div>
+                <img src='https://i.imgur.com/dsNvNIK.jpg?3./images/hello.png' class=website-image alt="Jennifer's headshot"/>
             </div>
         </div>
-        <div class='div div-gal draggable' onClick='bringCardToFront(this);'>
+        <div class='div div-res draggable' onClick='bringCardToFront(this);'>
             <span class=project-span>
-                <h2>Gallery</h2>
-                <a href='https://github.com/jennifer/gallery' target=blank><i title='View on GitHub' class='fab fa-github icon-project-span'></i></a>
-                <a href='https://website-gallery.herokuapp.com/' target=blank><i title='Go to Gallery' class="fas fa-external-link-alt icon-project-span"></i></a>
+                <h2>Resume</h2>
+                <a href='https://drive.google.com/file/d/1Og3-9QOkGxIOgBcxNK7bueYIMSZ2nvxR/view?usp=sharing' target=blank><i title="Go to Jennifer's Resume" class="fas fa-external-link-alt icon-project-span"></i></a>
             </span>
             <div class=each-website>
-                <img src='https://i.imgur.com/sct6tEh.jpg' class=website-image alt='Gallery screenshot'/>
-                <div class=overlay>
-                    <p class=line-margin-bottom>A fullstack app that lets users collect, tag, and filter websites for design inspiration.</p>
-                    <p class=line-margin-bottom>Utilizes Webshot and Cloudinary to automatically take a screenshot and display it in an image gallery.</p>
-                    <p class=line-margin-bottom>Uses Node.js for backend CRUD operations, and CSS Grid and Flexbox for responsive layout.</p>
-                    <span>
-                        <a><i title='JavaScript' class='fab fa-js icon-tech'></i></a>
-                        <a><i title='Node.js' class='fab fa-node icon-tech'></i></a>
-                        <a><i title='mongoDB' class='fas fa-database icon-tech'></i></a>
-                        <a><i title='HTML5' class='fab fa-html5 icon-tech'></i></a>
-                        <a><i title='CSS3' class='fab fa-css3-alt icon-tech'></i></a>
-                    </span>
-                </div>
+                <img src='https://i.imgur.com/SIYs9jN.png?2' class=website-image alt="Jennifer's resume"/>
             </div>
         </div>
         <div class='div div-sv draggable' onClick='bringCardToFront(this);'>
@@ -115,21 +88,48 @@
                 </div>
             </div>
         </div>
-        <div class='div div-res draggable' onClick='bringCardToFront(this);'>
+        <div class='div div-gal draggable' onClick='bringCardToFront(this);'>
             <span class=project-span>
-                <h2>Resume</h2>
-                <a href='https://drive.google.com/file/d/1Og3-9QOkGxIOgBcxNK7bueYIMSZ2nvxR/view?usp=sharing' target=blank><i title="Go to Jennifer's Resume" class="fas fa-external-link-alt icon-project-span"></i></a>
+                <h2>Gallery</h2>
+                <a href='https://github.com/jennifer/gallery' target=blank><i title='View on GitHub' class='fab fa-github icon-project-span'></i></a>
+                <a href='https://website-gallery.herokuapp.com/' target=blank><i title='Go to Gallery' class="fas fa-external-link-alt icon-project-span"></i></a>
             </span>
             <div class=each-website>
-                <img src='https://i.imgur.com/SIYs9jN.png?2' class=website-image alt="Jennifer's resume"/>
+                <img src='https://i.imgur.com/sct6tEh.jpg' class=website-image alt='Gallery screenshot'/>
+                <div class=overlay>
+                    <p class=line-margin-bottom>A fullstack app that lets users collect, tag, and filter websites for design inspiration.</p>
+                    <p class=line-margin-bottom>Utilizes Webshot and Cloudinary to automatically take a screenshot and display it in an image gallery.</p>
+                    <p class=line-margin-bottom>Uses Node.js for backend CRUD operations, and CSS Grid and Flexbox for responsive layout.</p>
+                    <span>
+                        <a><i title='JavaScript' class='fab fa-js icon-tech'></i></a>
+                        <a><i title='Node.js' class='fab fa-node icon-tech'></i></a>
+                        <a><i title='mongoDB' class='fas fa-database icon-tech'></i></a>
+                        <a><i title='HTML5' class='fab fa-html5 icon-tech'></i></a>
+                        <a><i title='CSS3' class='fab fa-css3-alt icon-tech'></i></a>
+                    </span>
+                </div>
             </div>
         </div>
-        <div class='div div-pic draggable' onClick='bringCardToFront(this);'>
-            <span class='project-span line-margin-top line-margin-bottom'>
-                <a href='https://github.com/jennifer' target=blank><i title="View Jennifer's GitHub" class='fab fa-github icon-project-span padding-left'></i></a>
+        <div class='div div-wiki draggable' onClick='bringCardToFront(this);'>
+            <span class=project-span>
+                <h2>Wikispeaks</h2>
+                <a href='https://github.com/jennifer/wikispeaks' target=blank><i title='View on GitHub' class='fab fa-github icon-project-span'></i></a>
+                <a href='https://wikispeaks.herokuapp.com/' target=blank><i title='Go to Wikispeaks' class="fas fa-external-link-alt icon-project-span"></i></a>
             </span>
             <div class=each-website>
-                <img src='https://i.imgur.com/dsNvNIK.jpg?3./images/hello.png' class=website-image alt="Jennifer's headshot"/>
+                <img src='https://i.imgur.com/QmAGZhq.png' class=website-image alt='Wikispeaks screenshot'/>
+                <div class=overlay>
+                    <p class=line-margin-bottom>A fullstack app enabling users to search for Wikipedia articles, view images, and listen to content read aloud.</p>
+                    <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
+                    <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout.</p>
+                    <span>
+                        <a><i title='JavaScript' class='fab fa-js icon-tech'></i></a>
+                        <a><i title='Node.js' class='fab fa-node icon-tech'></i></a>
+                        <a><i title='Amazon Polly' class='fab fa-aws icon-tech'></i></a>
+                        <a><i title='HTML5' class='fab fa-html5 icon-tech'></i></a>
+                        <a><i title='CSS3' class='fab fa-css3-alt icon-tech'></i></a>
+                    </span>
+                </div>
             </div>
         </div>
     </main>
