--- a/index.html
+++ b/index.html
@@ -25,18 +25,17 @@
                 Always learning.
             </p>
             <span>
-                <a href='https://github.com/jennifer' target=blank><i class='fab fa-github icon-tech'></i></a>
-                <a href='https://www.linkedin.com/in/kerssen/' target='blank'><i class='fab fa-linkedin icon-tech'></i></a>
-                <a href='mailto:jjkerssen@gmail.com'><i class='far fa-envelope icon-click icon-tech'></i></a>
+                <a href='https://github.com/jennifer' title='Go to my GitHub' target=blank><i class='fab fa-github icon-tech'></i></a>
+                <a href='https://www.linkedin.com/in/kerssen/' title='Go to my LinkedIn' target='blank'><i class='fab fa-linkedin icon-tech'></i></a>
+                <a href='mailto:jjkerssen@gmail.com' title='Email me'><i class='far fa-envelope icon-click icon-tech'></i></a>
             </span>
         </div>
         <div class='div div-pic draggable' onClick='bringCardToFront(this);'>
-            <span class='project-span line-margin-top line-margin-bottom'>
-                <a href='https://github.com/jennifer' target=blank><i title="View Jennifer's GitHub" class='fab fa-github icon-project-span padding-left'></i></a>
-            </span>
-            <div class=each-website>
+            <a href='https://github.com/jennifer' title='Go to my GitHub' target=blank>
+                <div class=each-website>
                 <img src='https://i.imgur.com/dsNvNIK.jpg?3./images/hello.png' class=website-image alt="Jennifer's headshot"/>
             </div>
+        </a>
         </div>
         <div class='div div-res draggable' onClick='bringCardToFront(this);'>
             <span class=project-span>
