--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv='X-UA-Compatible' content='ie=edge'>
     <title>Jennifer's Portfolio</title>
     <link href='styles.css' rel='stylesheet' type='text/css' />
-    <link href='https://fonts.googleapis.com/css?family=Niramit' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC" rel="stylesheet">
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
@@ -14,22 +14,20 @@
 </head>
 <body>
     <main>
-        <div class=bio>
-            <span>
-                <h1 class=card-title>Hi, I'm Jennifer</h1><img src='./hello.png' class='hello' alt='Waving hello emoji'/>
-            </span>
-            <p class='line-margin-bottom line-margin-top'>I’m a fullstack developer in Boulder, CO. 
-                I work with JavaScript, Node.js, and React. 
-                I'm inspired by clever solutions to complex problems and creative implementations for everyday tools. 
-                I value relentless curiosity and continuous improvement, and I strive to be a good steward for all users. 
-                Always learning.
+        <div class='bio line-margin-top'>
+            <h1 >I'm Jennifer Kerssen, a fullstack web developer, in Boulder, CO.</h1>
+            <p> 
+                I create web applications with Javascript, Node.js, and React.
+                My professional background is in e-commerce, with experience in development, research, and strategy. 
+                I have spent the past year learning JavaScript with the ultimate goal of building tools like the ones I use every day. 
+                I'm inspired by clever solutions to complex problems and creative implementations for everyday tools.
             </p>
-            <span>
-                <a href='https://github.com/jennifer' title='Go to my GitHub' target=blank><i class='fab fa-github icon-tech'></i></a>
-                <a href='https://www.linkedin.com/in/kerssen/' title='Go to my LinkedIn' target='blank'><i class='fab fa-linkedin icon-tech'></i></a>
-                <a href='mailto:jjkerssen@gmail.com' title='Email me'><i class='far fa-envelope icon-click icon-tech'></i></a>
-            </span>
         </div>
+        <span>
+            <a href='https://github.com/jennifer' title='Go to my GitHub' target=blank><i class='fab fa-github icon-tech'></i></a>
+            <a href='https://www.linkedin.com/in/kerssen/' title='Go to my LinkedIn' target='blank'><i class='fab fa-linkedin icon-tech'></i></a>
+            <a href='mailto:jjkerssen@gmail.com' title='Email me'><i class='far fa-envelope icon-click icon-tech'></i></a>
+        </span>
         <div class='div div-pic draggable' onClick='bringCardToFront(this);'>
             <a href='https://github.com/jennifer' title='Go to my GitHub' target=blank>
                 <div class=each-website>
