turn off JS features for mobile

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <meta http-equiv='X-UA-Compatible' content='ie=edge'>
-    <title>Jennifer's Portfolio</title>
+    <title>Jennifer's Website</title>
     <link href='styles.css' rel='stylesheet' type='text/css' />
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC" rel="stylesheet">
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
@@ -17,7 +17,7 @@
         <div class='bio line-margin-top'>
             <h1 >I'm Jennifer Kerssen, a fullstack web developer, in Boulder, CO.</h1>
             <p> 
-                I create web applications with Javascript, Node.js, and React.
+                I create web applications with JavaScript, Node.js, and React.
                 My professional background is in e-commerce, with experience in development, research, and strategy. 
                 I have spent the past year learning JavaScript with the ultimate goal of building tools like the ones I use every day. 
                 I'm inspired by clever solutions to complex problems and creative implementations for everyday tools.
