--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
     <main>
         <div class='bio line-margin-top'>
-            <h1 >I'm Jennifer Kerssen, a fullstack web developer, in Boulder, CO.</h1>
-            <p> 
+            <h1 class='bio-inline'>I'm Jennifer Kerssen, a fullstack web developer, in Boulder, CO.</h1>
+            <p class='bio-inline'> 
                 I create web applications with JavaScript, Node.js, and React.
                 My professional background is in e-commerce, with experience in development, research, and strategy. 
                 I have spent the past year learning JavaScript with the ultimate goal of building tools like the ones I use every day. 
