--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <main>
         <div class='bio line-margin-top'>
-            <h1 class='bio-inline'>I'm Jennifer Kerssen, a fullstack web developer, in Boulder, CO.</h1>
+            <h1 class='bio-inline'>I'm Jennifer Kerssen, a fullstack web developer in Boulder, CO.</h1>
             <p class='bio-inline'> 
                 I create web applications with JavaScript, Node.js, and React.
                 My professional background is in e-commerce, with experience in development, research, and strategy. 
