--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <div class='div div-res draggable' onClick='bringCardToFront(this);'>
             <span class=project-span>
                 <h2>Resume</h2>
-                <a href='https://drive.google.com/file/d/1Og3-9QOkGxIOgBcxNK7bueYIMSZ2nvxR/view?usp=sharing' target=blank><i title="Go to Jennifer's Resume" class="fas fa-external-link-alt icon-project-span"></i></a>
+                <a href='https://drive.google.com/file/d/11VXVW5y2FS0GNIimfHtM4QYIwIRmgqzT/view?usp=sharing' target=blank><i title="Go to Jennifer's Resume" class="fas fa-external-link-alt icon-project-span"></i></a>
             </span>
             <div class=each-website>
-                <img src='https://i.imgur.com/SIYs9jN.png?2' class=website-image alt="Jennifer's resume"/>
+                <img src='https://i.imgur.com/k63chyX.png' class=website-image alt="Jennifer's resume"/>
             </div>
         </div>
         <div class='div div-sv draggable' onClick='bringCardToFront(this);'>
