--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             <h1 class='bio-inline'>I'm Jennifer Kerssen, a fullstack web developer in Boulder, CO.</h1>
             <p class='bio-inline'> 
                 I create web applications with JavaScript, Node.js, and React.
-                My professional background is in e-commerce, with experience in development, research, and strategy. 
-                I have spent the past year learning JavaScript with the ultimate goal of building tools like the ones I use every day. 
+                My professional background is in e-commerce, with experience in web development, implementation management, and content strategy.  
                 I'm inspired by clever solutions to complex problems and creative implementations for everyday tools.
             </p>
         </div>
@@ -38,7 +37,7 @@
         <div class='div div-res draggable' onClick='bringCardToFront(this);'>
             <span class=project-span>
                 <h2>Resume</h2>
-                <a href='https://drive.google.com/file/d/11VXVW5y2FS0GNIimfHtM4QYIwIRmgqzT/view?usp=sharing' target=blank><i title="Go to Jennifer's Resume" class="fas fa-external-link-alt icon-project-span"></i></a>
+                <a href='https://drive.google.com/open?id=1p4bZS36s1hFm2VZF7zmTd055UmzlCDQh' target=blank><i title="Go to Jennifer's Resume" class="fas fa-external-link-alt icon-project-span"></i></a>
             </span>
             <div class=each-website>
                 <img src='https://i.imgur.com/k63chyX.png' class=website-image alt="Jennifer's resume"/>
