--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <a href='https://github.com/jennifer' title='Go to my GitHub' target=blank><i class='fab fa-github icon-tech'></i></a>
             <a href='https://www.linkedin.com/in/kerssen/' title='Go to my LinkedIn' target='blank'><i class='fab fa-linkedin icon-tech'></i></a>
             <a href='mailto:jjkerssen@gmail.com' title='Email me'><i class='far fa-envelope icon-click icon-tech'></i></a>
+            <br/><br/><br/>
         </span>
         <div class='div div-pic draggable' onClick='bringCardToFront(this);'>
             <a href='https://github.com/jennifer' title='Go to my GitHub' target=blank>
@@ -40,7 +41,7 @@
                 <a href='https://drive.google.com/open?id=1p4bZS36s1hFm2VZF7zmTd055UmzlCDQh' target=blank><i title="Go to Jennifer's Resume" class="fas fa-external-link-alt icon-project-span"></i></a>
             </span>
             <div class=each-website>
-                <img src='https://i.imgur.com/k63chyX.png' class=website-image alt="Jennifer's resume"/>
+                <img src='portfolio-resume.png' class=website-image alt="Jennifer's resume"/>
             </div>
         </div>
         <div class='div div-sv draggable' onClick='bringCardToFront(this);'>
